@@ -206,6 +206,7 @@
 	(set_exec_handler): Likewise.
 	* libproc/Pcontrol.c (set_exec_handler): Likewise.
 	(Pgrab): Prohibit self-grabs.
+	(bkpt_flush): Suppress breakpoint traps during breakpoint flushing.
 	* libproc/rtld_db.c (rd_event_enable): Turn on the rd_monitoring
 	flag when rtld activity monitoring is turned on.
 	(rd_ldso_nonzero_lmid_consistent_begin): Consistently use 0/1
